--- a/nginx/vhost.conf
+++ b/nginx/vhost.conf
@@ -2,10 +2,10 @@ server {
   # listen 80 default_server deferred; # for Linux
   listen 80;
 
-  # e.g. "localhost" to accept all connections, or "www.example.com"
-  # to handle the requests for "example.com" (and www.example.com)
-  server_name www.blog.org;
-  server_name blog.org;
+  # HTTPS is handled without ngnix, iptables redirects 443 to 44300 so the user application can use it
+
+  server_name www.projectopencontent.org;
+  server_name projectopencontent.org;
 
   access_log /home/blog/log/nginx.log;
 
@@ -19,7 +19,7 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_set_header X-NginX-Proxy true;
-      proxy_pass http://127.0.0.1:8888/;
+      proxy_pass http://127.0.0.1:8000/;
       proxy_redirect off;
   }
 
